# cpg_interface

./: .gitignore  CMakeLists.txt  README  cpg_interface.kdev4
src/: chart.cpp  chart.h  cpg_interface.cpp  cpg_interface.h  cpg_interface.ui  main.cpp  motionneuron.cpp  motionneuron.h  mototochart.cpp  mototochart.h  patternformation.cpp  patternformation.h  patterntochart.cpp  patterntochart.h  rythmgeneratortimed.cpp  rythmgeneratortimed.h  rythmtochart.cpp  rythmtochart.h  tochart.cpp  tochart.h  xyseriesiodevice.cpp  xyseriesiodevice.h
